Civer System WIP

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -68,3 +68,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/RealisticMovement.CharacterCoverComponent.CurrentCoverable",NewName="/Script/RealisticMovement.CharacterCoverComponent.ClosestCoverable")
++PropertyRedirects=(OldName="/Script/RealisticMovement.CharacterCoverComponent.OnCoverFound",NewName="/Script/RealisticMovement.CharacterCoverComponent.OnClosestCoverFound")
++PropertyRedirects=(OldName="/Script/RealisticMovement.CharacterCoverComponent.OnCoverLost",NewName="/Script/RealisticMovement.CharacterCoverComponent.OnClosestCoverLost")
