--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -70,9 +70,11 @@ ManualIPAddress=
 
 
 [CoreRedirects]
-+PropertyRedirects=(OldName="/Script/RealisticMovement.CharacterCoverComponent.CurrentCoverable",NewName="/Script/RealisticMovement.CharacterCoverComponent.ClosestCoverable")
++PropertyRedirects=(OldName="/Script/RealisticMovement.CharacterCoverComponent.CurrentCoverable",NewName="/Script/RealisticMovement.CharacterCoverComponent.ClosestCover")
 +PropertyRedirects=(OldName="/Script/RealisticMovement.CharacterCoverComponent.OnCoverFound",NewName="/Script/RealisticMovement.CharacterCoverComponent.OnClosestCoverFound")
 +PropertyRedirects=(OldName="/Script/RealisticMovement.CharacterCoverComponent.OnCoverLost",NewName="/Script/RealisticMovement.CharacterCoverComponent.OnClosestCoverLost")
++PropertyRedirects=(OldName="/Script/RealisticMovement.CharacterCoverComponent.ClosestCoverable",NewName="/Script/RealisticMovement.CharacterCoverComponent.ClosestCover")
++PropertyRedirects=(OldName="/Script/RealisticMovement.CharacterCoverComponent.ActiveCoverable",NewName="/Script/RealisticMovement.CharacterCoverComponent.ActiveCover")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
